step 3: Enviando data a componente hijo

--- a/hotelClient/src/app/hotelApp/components/storage/storage.component.html
+++ b/hotelClient/src/app/hotelApp/components/storage/storage.component.html
@@ -1,3 +1,8 @@
-<p>
-  storage works!
-</p>
+
+<ng-container *ngIf="storage; then storageLoaded; else storagePending"></ng-container>
+<ng-template #storagePending>
+  <img src="./assets/circles.svg" >
+</ng-template>
+<ng-template #storageLoaded>
+  Lodaded!
+</ng-template>
