step 4: Estilizando cards de hoteles

--- a/hotelClient/src/app/hotelApp/components/header/header.component.html
+++ b/hotelClient/src/app/hotelApp/components/header/header.component.html
@@ -1,3 +1,5 @@
-<p>
-  header works!
-</p>
+<header>
+  <div class="container">
+    <img src="./assets/images/logo-almundo.svg" alt="Logo Company" >
+  </div>
+</header>
