--- a/hotelClient/src/app/hotelApp/containers/landing/landing.component.html
+++ b/hotelClient/src/app/hotelApp/containers/landing/landing.component.html
@@ -1,3 +1,13 @@
 <app-header></app-header>
-<app-aside></app-aside>
-<app-storage [storage]="hotelData" ></app-storage>
+<main>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-3 col-md-12">
+        <app-aside></app-aside>
+      </div>
+      <div class="col-lg-9 col-md-12">
+        <app-storage [storage]="hotelData" ></app-storage>
+      </div>
+    </div>  
+  </div>
+</main>
