--- a/hotelClient/src/app/hotelApp/components/storage/storage.component.html
+++ b/hotelClient/src/app/hotelApp/components/storage/storage.component.html
@@ -1,8 +1,34 @@
 
 <ng-container *ngIf="storage; then storageLoaded; else storagePending"></ng-container>
 <ng-template #storagePending>
-  <img src="./assets/circles.svg" >
+  <img class="rounded mx-auto d-block" src="./assets/circles.svg" >
 </ng-template>
 <ng-template #storageLoaded>
-  Lodaded!
+  <div class="card w-100" *ngFor="let hotel of storage;">
+    <div class="card-body">
+      <div class="row">
+        <div class="col-lg-4 colmd-12 image-container">
+          <img class="img-fluid" [src]="'./assets/images/hotels/'+hotel.image" alt="">
+        </div>
+        <div class="col-lg-5 colmd-12">
+            <h5 class="cardtitle">{{hotel.name}}</h5>
+            <p class="stars">
+              <span *ngFor="let star of [].constructor(hotel.stars);">
+                <i class="fa fa-star"></i>
+              </span>
+            </p>
+            <div class="amenities-container">
+              <div class="amenities" *ngFor="let amenitie of hotel.amenities; let i = index;">
+                <img [src]="'./assets/icons/amenities/'+amenitie+'.svg'" alt="">
+              </div>
+            </div>      
+        </div>
+        <div class="col-lg-3 colmd-12 priceRate">
+          <p>Precio por noche de habitación</p>
+          <h4>ARS <span>{{hotel.price}}</span></h4>
+          <button type="button" class="btn btn-primary">Ver Hotel</button>
+        </div>
+      </div>
+    </div>
+  </div>
 </ng-template>
