step 5: Estilizando Aside de filtros

--- a/hotelClient/src/app/hotelApp/containers/landing/landing.component.html
+++ b/hotelClient/src/app/hotelApp/containers/landing/landing.component.html
@@ -2,10 +2,10 @@
 <main>
   <div class="container">
     <div class="row">
-      <div class="col-lg-3 col-md-12">
+      <div class="col-lg-4 col-md-12" style="padding:0;">
         <app-aside></app-aside>
       </div>
-      <div class="col-lg-9 col-md-12">
+      <div class="col-lg-8 col-md-12">
         <app-storage [storage]="hotelData" ></app-storage>
       </div>
     </div>  
