--- a/hotelClient/src/app/hotelApp/components/aside/aside.component.html
+++ b/hotelClient/src/app/hotelApp/components/aside/aside.component.html
@@ -1,3 +1,60 @@
-<p>
-  aside works!
-</p>
+<div class="filtros">
+  <h5>Filtros</h5>
+</div>
+
+<form id="nombre-hotel">
+  <div class="excerpt-form">
+    <p><i class="fa fa-search"></i> Nombre del Hotel</p>
+  </div>
+  <div class="form-group">
+    <input type="text" />
+    <button class="btn btn-primary">Buscar</button>
+  </div>
+</form>
+
+<form id="distincion-estrellas">
+  <div class="excerpt-form">
+    <p><i class="fa fa-star"></i> Estrellas del Hotel</p>
+  </div>
+  <div class="form-check">
+    <input class="form-check-input" type="radio" name="seleccionaEstrellas" id="cincoEstrellas" value=5 checked>
+    <label class="form-check-label" for="cincoEstrellas">
+      <i class="fa fa-star"></i>
+      <i class="fa fa-star"></i>
+      <i class="fa fa-star"></i>
+      <i class="fa fa-star"></i>
+      <i class="fa fa-star"></i>
+    </label>
+  </div>
+  <div class="form-check">
+    <input class="form-check-input" type="radio" name="seleccionaEstrellas" id="cuatroEstrellas" value=4>
+    <label class="form-check-label" for="cuatroEstrellas">
+        <i class="fa fa-star"></i>
+        <i class="fa fa-star"></i>
+        <i class="fa fa-star"></i>
+        <i class="fa fa-star"></i>
+    </label>
+  </div>
+  <div class="form-check">
+    <input class="form-check-input" type="radio" name="seleccionaEstrellas" id="tresEstrellas" value=3>
+    <label class="form-check-label" for="tresEstrellas">
+        <i class="fa fa-star"></i>
+        <i class="fa fa-star"></i>
+        <i class="fa fa-star"></i>
+    </label>
+  </div>
+  <div class="form-check">
+    <input class="form-check-input" type="radio" name="seleccionaEstrellas" id="dosEstrellas" value=2>
+    <label class="form-check-label" for="dosEstrellas">
+        <i class="fa fa-star"></i>
+        <i class="fa fa-star"></i>
+    </label>
+  </div>
+  <div class="form-check">
+    <input class="form-check-input" type="radio" name="seleccionaEstrellas" id="unaEstrella" value=1>
+    <label class="form-check-label" for="unaEstrella">
+        <i class="fa fa-star"></i>
+    </label>
+  </div>
+      
+</form>
