--- a/hotelClient/src/app/hotelApp/components/header/header.component.scss
+++ b/hotelClient/src/app/hotelApp/components/header/header.component.scss
@@ -5,8 +5,9 @@ header{
 .container{
   display: flex;
   justify-content: flex-start;
-  align-items: center;
-  padding-left: 1%;
+  align-content: center;
+  height: 100%;
+  min-height: 80px;
   img{
     display: block;
   }  
