--- a/hotelClient/src/app/hotelApp/components/storage/storage.component.scss
+++ b/hotelClient/src/app/hotelApp/components/storage/storage.component.scss
@@ -72,6 +72,9 @@ button.btn.btn-primary {
     border-color: #0046a2;
   }
 }
+.loadWrapperBtn{
+  margin: 2% 0%;
+}
 @media (min-width: 768px) {
   .image-container .img-fluid{
     width: unset;
