--- a/hotelClient/src/app/hotelApp/containers/landing/landing.component.html
+++ b/hotelClient/src/app/hotelApp/containers/landing/landing.component.html
@@ -3,7 +3,9 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-4 col-md-12" style="padding:0;">
-        <app-aside></app-aside>
+        <app-aside 
+          (filteredByname) = "loadfilteredReq($event)" 
+        ></app-aside>
       </div>
       <div class="col-lg-8 col-md-12">
         <app-storage 
